--- a/_posts/2024-03-06-Web Notes.md
+++ b/_posts/2024-03-06-Web Notes.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: NT Filesystem Internals Study Notes
+title: WebApp Study Notes
 date: 2024-03-06
 categories: Notes
 tags:
