--- a/_posts/2024-03-06-Web Notes.md
+++ b/_posts/2024-03-06-Web Notes.md
@@ -2,7 +2,7 @@
 layout: post
 title: WebApp Study Notes
 date: 2024-03-06
-categories: [notes, web]
+categories: [Notes, web]
 tags:
   - notes
 ---
